# firecore-world-lib

./: Cargo.toml
builder/: Cargo.toml
builder/examples/: run.rs
builder/src/builder/: location.rs  map.rs  textures.rs  warp.rs
builder/src/builder/npc/: group.rs
src/: lib.rs  script.rs  serialized.rs  state.rs
src/character/: mod.rs  movement.rs  player.rs  sprite.rs
src/character/movement/: astar.rs  mod.rs
src/character/npc/: character.rs  interact.rs  mod.rs  movement.rs  npc_type.rs  trainer.rs
src/map/: battle.rs  manager.rs  mod.rs  npc.rs  warp.rs  wild.rs
src/map/chunk/: map.rs  mod.rs  world_chunk_map.rs
src/map/manager/: state.rs  tile.rs
src/map/set/: manager.rs  mod.rs
src/map/wild/: encounter.rs  mod.rs  table.rs
src/npc/: mod.rs  movement.rs  trainer.rs
src/pokemon/: mod.rs  wild_pokemon_table.rs
src/positions/: bbox.rs  coordinate.rs
src/script/world/: action_kind.rs  actions.rs  condition.rs  mod.rs
src/warp/: mod.rs  warp_transition.rs
