[package]
name = "firecore-world-lib"
version = "0.4.0-alpha.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
pathfind = ["indexmap", "num-traits"]

[dependencies]

firecore-util = { git = "https://github.com/DoNotDoughnut/firecore-util" }
#firecore-util = { path = "../firecore-util" }

firecore-pokedex = { git = "https://github.com/DoNotDoughnut/firecore-pokedex" }
#firecore-pokedex = { path = "../firecore-pokedex" }

firecore-audio-lib = { git = "https://github.com/DoNotDoughnut/firecore-audio-lib" }

firecore-rand = { git = "https://github.com/DoNotDoughnut/firecore-rand" }

serde = { version = "1.0", features = ["derive"] }

ahash = { version = "0.7", features = ["serde"] }
smallvec = { version = "1.6", features = ["serde"] }
tinystr = { version = "0.4", features = ["serde"] }

### pathfinding temporary crates
indexmap = { version = "1.6", optional = true }
num-traits = { version = "0.2", optional = true }