[package]
name = "firecore-world"
version = "0.5.0-beta.2021-12-24"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"

[dependencies]

serde = { version = "1", features = ["derive"] }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
rand = { version = "0.8", default-features = false }
hashbrown = { version = "0.9", features = ["serde"] }
# smallvec = { version = "1", features = ["union", "const_new"] }
# enum-map = { version = "1", features = ["serde"] }

firecore-pokedex = { version = "0.0.8", git = "https://github.com/fiirecore/pokedex", rev = "b5279db" }
# firecore-pokedex = { path = "../../firecore/pokedex" }

### Events

crossbeam-channel = "0.5"

### Pathfinding

# indexmap = "1.6"

[workspace]
members = ["builder"]